# Mesh-scale-space

./: .gitignore  CMakeLists.txt  curvature_fit_yocto.cpp  diff_geo.cpp  diff_geo.h  drawing_circle.cpp  drawing_circle.h  main.cpp  mean_curv.cpp  utilities.cpp  utilities.h
apps/: CMakeLists.txt  app.cpp  app.h  main.cpp
data/: bi-torus.sing  bunny-watertight.off  bunny_100k.off  bunny_100k.ply  fertility80kt.off  fertility_100k.off  fertility_100k.ply  hand0.off  hand1.off  lion.off  plane_60k.ply  sphere_50k.ply
data/FAUST/: tr_reg_005.off  tr_reg_006.off  tr_reg_007.off  tr_reg_008.off  tr_reg_009.off  tr_reg_011.off  tr_reg_012.off  tr_reg_013.off  tr_reg_014.off  tr_reg_015.off  tr_reg_016.off  tr_reg_018.off  tr_reg_019.off  tr_reg_020.off  tr_reg_021.off  tr_reg_022.off  tr_reg_023.off  tr_reg_025.off  tr_reg_026.off  tr_reg_027.off  tr_reg_028.off  tr_reg_029.off  tr_reg_030.off  tr_reg_032.off  tr_reg_033.off  tr_reg_034.off  tr_reg_035.off  tr_reg_036.off  tr_reg_037.off  tr_reg_038.off  tr_reg_039.off  tr_reg_040.off  tr_reg_041.off  tr_reg_042.off  tr_reg_045.off  tr_reg_046.off  tr_reg_047.off  tr_reg_048.off  tr_reg_049.off  tr_reg_050.off  (+44 more)
data/Horse/: horse-01-01.off  horse-01-02.off  horse-01-03.off.off  horse-01-04.off  horse-01.off  horse-02.off  horse-03.off  horse-08.off  horse-09.off  horse-10.off
data/high-genus/: Radiator.stl  basket-cones
data_extra/: hippo.off
libs/: CMakeLists.txt
libs/VTP/: geodesic_algorithm_exact.h  geodesic_constants_and_simple_functions.h
libs/ann_1.1.2/ann2fig/: ann2fig.cpp
libs/ann_1.1.2/sample/: ann_sample
libs/diff_geo/: diff_geo.cpp  diff_geo.h
libs/public/: GA.cpp  GA.h  MAIN.cpp  Mesh.cpp  Mesh.h  readme.txt
libs/public/ShapeCorrespGA_x64/: ShapeCorrespGA_x64.sln  ShapeCorrespGA_x64.vcxproj  (+1 more)
libs/utils/: CMakeLists.txt  drawing_circle.cpp  drawing_circle.h  drawing_polygons.cpp  drawing_polygons.h  mesh_io.cpp  utilities.cpp  utilities.h
libs/yocto/: yocto_mesh.cpp  yocto_mesh.h
libs/yocto_gui/: yocto_imgui.cpp  yocto_imgui.h
(+23 files in other folders)
